--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,18 @@
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="bg-gray-50">
+    <% if user_signed_in? %>
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/mobile_sidebar' %>
+    <% end %>
+
+    <main class="container mx-auto px-4 py-8">
+      <%= render 'shared/flash' %>
       <%= yield %>
     </main>
   </body>
