--- a/app/views/daily_sales/_form.html.erb
+++ b/app/views/daily_sales/_form.html.erb
@@ -15,7 +15,7 @@
     <div class="space-y-4">
       <div>
         <%= form.label :product_id, class: "block text-sm font-medium text-gray-700" %>
-        <%= form.collection_select :product_id, @products, :id, :name_with_stock, { prompt: "Select Product" }, { class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-red-500 focus:ring-red-500 sm:text-sm" } %>
+        <%= form.collection_select :product_id, @products, :id, :name, { prompt: "Select Product" }, { class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-red-500 focus:ring-red-500 sm:text-sm" } %>
       </div>
 
       <div>
