--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
       <div class="flex items-center">
         <div class="flex-shrink-0">
           <%= link_to root_path, class: "text-white font-bold text-xl" do %>
-            Sales Manager
+            Nita Nation
           <% end %>
         </div>
         <div class="hidden md:block">
