--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -21,7 +21,7 @@
   
   <div class="bg-white p-6 rounded-lg shadow-md border-l-4 border-blue-500">
     <h3 class="text-gray-500 font-medium">Today's Profit</h3>
-    <p class="text-3xl font-bold text-blue-600"><%= number_to_currency(@total_profit_today) %></p>
+    <p class="text-3xl font-bold text-blue-600"><%= number_to_currency(@total_profit_today, :unit => "Tshs. ", :delimiter => ",") %></p>
   </div>
 </div>
 
